--- a/index.html
+++ b/index.html
@@ -5,37 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Terminal Portfolio by Sat Naing</title>
-    <meta name="title" content="Terminal Portfolio by Sat Naing" />
+    <title>Terminal Portfolio</title>
+    <meta name="title" content="Terminal Portfolio" />
     <meta
       name="description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="Terminal portfolio website coded with ReactJS. Terminal is a full-stack developer based in Yangon, Myanmar."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://terminal.satnaing.dev/" />
-    <meta property="og:title" content="Terminal Portfolio by Sat Naing" />
+    <meta property="og:url" content="https://l13v.net" />
+    <meta property="og:title" content="Terminal Portfolio" />
     <meta
       property="og:description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="Terminal portfolio website coded with ReactJS."
     />
     <meta
       property="og:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
+      content="https://l13v.net/"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://terminal.satnaing.dev/" />
-    <meta property="twitter:title" content="Terminal Portfolio by Sat Naing" />
+    <meta property="twitter:url" content="https://l13v.net/" />
+    <meta property="twitter:title" content="Terminal Portfolio" />
     <meta
       property="twitter:description"
-      content="Sat Naing's terminal portfolio website coded with ReactJS. Sat Naing is a full-stack developer based in Yangon, Myanmar."
+      content="Terminal portfolio website coded with ReactJS."
     />
     <meta
       property="twitter:image"
-      content="https://terminal.satnaing.dev/sat-naing-terminal-og.png"
+      content="https://l13v.net/sat-naing-terminal-og.png"
     />
 
     <!-- Favicons and assets -->
